--- a/src/styles/common/_variables.less
+++ b/src/styles/common/_variables.less
@@ -10,8 +10,13 @@
 @pink: #f3367d;
 @pink-dark: #d1175d;
 
-@raspberry: #d1596d;
+@raspberry_old: #d1596d;
+@raspberry: #d8385f;
+
 @cherry: #5e212c;
+
+@blue: #0089a9;
+
 
 @white: #fff;
 @gray-light: #ededed;
