--- a/src/styles/pages--external/anims.less
+++ b/src/styles/pages--external/anims.less
@@ -20,3 +20,50 @@
     opacity: 1;
   }
 }
+
+#ajax-loader{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: -100%;
+  background-color: @raspberry;
+  z-index: 2000;
+  transition: all 500ms;
+  &.left{
+    left: -100%;
+  }
+  &.right{
+    left: 100%;
+  }
+  &.active{
+    left: 0;
+  }
+}
+
+@keyframes shake {
+  10%, 90% {
+    transform: rotate(-3deg);
+  }
+
+  20%, 80% {
+    transform: rotate(5deg);
+  }
+
+  30%, 50%, 70% {
+    transform: rotate(-10deg);
+  }
+
+  40%, 60% {
+    transform: rotate(10deg);
+  }
+}
+.shake{
+  transform: rotate(0deg);
+  transform-origin: 50% 50%;
+  &:hover{
+    animation: shake 800ms 1 cubic-bezier(.36,.07,.19,.97) both;
+  }
+  span:hover + &{
+    animation: shake 800ms 1 cubic-bezier(.36,.07,.19,.97) both;
+  }
+}
