--- a/src/styles/pages--external/general.less
+++ b/src/styles/pages--external/general.less
@@ -31,7 +31,7 @@ a{
   color: @pink;
   transition: all 300ms;
   &:hover{
-    text-decoration: underline;
+    text-decoration: none;
     color: @pink-dark;
   }
   &.white{
@@ -47,6 +47,7 @@ a{
 footer{
   padding: 15px;
   background-color: @white;
+  margin: 0 15px 15px;
   @media screen and (max-width: @mobile){
     //background-color: @gray-light;
   }
@@ -65,7 +66,7 @@ footer{
 }
 
 .hr-footer{
-  max-width: 600px;
+  max-width: 66%;
   margin: auto;
   border-color: @black;
 }
@@ -165,4 +166,13 @@ footer{
 }
 .block{
   display: block;
+}
+
+.blue{
+  color: @blue;
+}
+.underline{
+  &:hover{
+    text-decoration: underline;
+  }
 }
