--- a/src/styles/pages--external/long-read.less
+++ b/src/styles/pages--external/long-read.less
@@ -28,20 +28,30 @@
       vertical-align: top;
       line-height: 1;
       margin-right: 10px;
+      margin-top: 2px;
       transition: all 500ms;
     }
   }
-  .myth-menu-btn--open{
+  .book{
     position: absolute;
-    top: 15px;
     right: 15px;
+    top: 15px;
+  }
+  .myth-menu-btn--open{
+    position: fixed;
+    top: 30px;
+    right: 30px;
+    line-height: 1;
     @media screen and (max-width: @mobile){
       display: inline-block;
       position: initial;
       width: 50%;
       float: right;
-      padding: 24px 0;
+      padding: 26px 0;
       background-color: @pink;
+    }
+    @media screen and (min-width: 1366px){
+      right: ~"calc(50vw - 683px + 30px)";
     }
   }
   .title{
@@ -54,6 +64,10 @@
   //padding: 15px;
   background-color: @white;
   position: relative;
+  margin: 15px 15px 0;
+  @media screen and (max-width: @mobile){
+    margin: 0;
+  }
   h1{
     font-size: 36px;
     @media screen and (max-width: @mobile){
@@ -116,9 +130,11 @@
       margin-right: 5px;
     }
     &>div{
+      margin-top: 3px;
       display: inline-block;
       transition: all 500ms;
       margin-right: 10px;
+      vertical-align: top;
     }
   }
   .next{
@@ -136,7 +152,9 @@
       margin-left: 5px;
     }
     &>div{
+      margin-top: 3px;
       display: inline-block;
+      vertical-align: top;
       transition: all 500ms;
       margin-left: 10px;
     }
@@ -150,6 +168,12 @@
   div{
     display: inline-block;
     margin-left: 10px;
+    transform: scale(1);
+    transform-origin: 50% 50%;
+    transition: all 500ms;
+    &:hover{
+      transform: scale(1.2);
+    }
   }
 }
 
@@ -261,13 +285,16 @@
   top: 15px;
   right: 15px;
   cursor: pointer;
+  transition: all 500ms;
+  line-height: 1;
   span{
     display: inline-block;
-    vertical-align: top;
+    vertical-align: middle;
+    margin-right: 15px;
   }
   &>div{
     display: inline-block;
-    vertical-align: top;
+    vertical-align: middle;
   }
   &--close{
     position: absolute;
@@ -276,6 +303,15 @@
     @media screen and (max-width: @mobile){
       top: 15px;
       right: 15px;
+    }
+  }
+  &.add-bg{
+    background-color: @pink;
+    padding: 15px;
+    right: 15px;
+    top: 0px;
+    @media screen and (min-width: 1366px){
+      right: ~"calc(50vw - 683px + 15px)";
     }
   }
 }
@@ -304,7 +340,7 @@
   }
 }
 .myth-menu{
-  background-color: @pink;
+  background-color: @raspberry;
   position: fixed;
   top: -200%;
   left: 0;
