--- a/src/styles/pages--external/main.less
+++ b/src/styles/pages--external/main.less
@@ -1,12 +1,12 @@
 #main-page{
-  background-image: url(http://placehold.it/1920x1080/d1596d/d1596d);
+  //background-image: url(http://placehold.it/1920x1080/d1596d/d1596d);
   background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
   //background-clip: content-box;
   height: 100vh;
   width: 100%;
-  background-color: #d1596d;
+  background-color: @raspberry;
   position: relative;
   min-height: 460px;
   padding-top: 300px;
@@ -19,7 +19,7 @@
   }
   &.auto-height{
     height: 100%;
-    padding-bottom: 150px;
+    padding-bottom: 110px;
     .step2{
       height: 1648px;
       @media screen and (max-width: @mobile){
@@ -118,10 +118,12 @@
     margin: 0 5px;
     //transition: all 250ms cubic-bezier(0, 0, 0.16, 1.03);
     text-align: right;
-    div:hover{
+    div{
       transition: all 250ms cubic-bezier(0, 0, 0.16, 1.03);
-      transform: scale(1.2);
       transform-origin: 50% 50%;
+    }
+    div:hover{
+      transform: scale(1.2);
     }
   }
   .block{
@@ -145,22 +147,26 @@
   padding: 25px 20px 30px;
   max-width: 30%;
   transition: all 500ms;
-  background-size: cover;
-  background-position: 50%  300px;
-  background-repeat: no-repeat;
   position: relative;
   padding-right: 100px;
   margin-bottom: 25px;
+  overflow: hidden;
   box-shadow: 0px 7px 12.61px 0.39px rgba(108, 31, 45, 0.56);
-  background-image: url(http://placehold.it/400x600);
   @media screen and (max-width: @mobile){
     width: 100%;
     max-width: 100%;
   }
+  a{
+    color: inherit;
+    transition: none;
+  }
   &:hover{
-    background-position: 50%  50%;
     &:nth-child(even){
       color: @white;
+    }
+    .background{
+      opacity: 1;
+      transform: scale(1.1);
     }
   }
   &:nth-child(even){
@@ -172,10 +178,14 @@
     line-height: 1.2;
     font-weight: 700;
     margin-top: 15px;
+    position: relative;
+    z-index: 2;
   }
   .number{
     text-transform: uppercase;
     font-size: 12px;
+    position: relative;
+    z-index: 2;
   }
   .more{
     color: @pink;
@@ -183,6 +193,7 @@
     left: 20px;
     bottom: 30px;
     cursor: pointer;
+    z-index: 2;
     span{
       margin-right: 5px;
       transition: all 500ms;
@@ -197,6 +208,21 @@
     display: inline-block;
     transform-origin: 50% 50%;
     transform: rotate(180deg);
+  }
+  .background{
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transform: scale(1);
+    transition: all 500ms;
+    width: 100%;
+    height: 300px;
+    z-index: 1;
+    background-image: url(http://placehold.it/400x600);
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
   }
 }
 .banner-block{
