--- a/src/styles/pages--external/forms.less
+++ b/src/styles/pages--external/forms.less
@@ -14,6 +14,9 @@
     box-shadow: none;
     border-color: @pink;
   }
+  &.invalid{
+    box-shadow: inset 0 0 10px #f42e2e;
+  }
 }
 form{
   text-align: center;
