--- a/src/styles/pages--external/terms.less
+++ b/src/styles/pages--external/terms.less
@@ -5,6 +5,10 @@
   &:last-child{
     border: 0;
   }
+  h2{
+    text-align: left;
+    text-transform: uppercase;
+  }
 }
 .terms-page{
   .nav-block{
