--- a/src/styles/common/_svg-sprite.less
+++ b/src/styles/common/_svg-sprite.less
@@ -4,183 +4,194 @@
     width: 164px;
     height: 46px;
     background-repeat: no-repeat;
-    background-size: 168px 161px;
+    background-size: 190px 168px;
+    .no-svg & {
+        background-image: url("../img/sprites/svg/svg-sprite.png");
+    }
+}
+.svg-sprite--logo_pink {
+    background-image: url("../img/sprites/svg/svg-sprite.svg");
+    background-position: -2px -50px;
+    width: 164px;
+    height: 46px;
+    background-repeat: no-repeat;
+    background-size: 190px 168px;
     .no-svg & {
         background-image: url("../img/sprites/svg/svg-sprite.png");
     }
 }
 .svg-sprite--logo_blue {
     background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -2px -50px;
+    background-position: -2px -98px;
     width: 141px;
     height: 39px;
     background-repeat: no-repeat;
-    background-size: 168px 161px;
+    background-size: 190px 168px;
     .no-svg & {
         background-image: url("../img/sprites/svg/svg-sprite.png");
     }
 }
 .svg-sprite--google_share {
     background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -2px -91px;
+    background-position: -2px -139px;
     width: 27px;
     height: 27px;
     background-repeat: no-repeat;
-    background-size: 168px 161px;
-    .no-svg & {
-        background-image: url("../img/sprites/svg/svg-sprite.png");
-    }
-}
-.svg-sprite--ok_share {
-    background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -31px -91px;
-    width: 26px;
-    height: 26px;
-    background-repeat: no-repeat;
-    background-size: 168px 161px;
+    background-size: 190px 168px;
     .no-svg & {
         background-image: url("../img/sprites/svg/svg-sprite.png");
     }
 }
 .svg-sprite--twitter_share {
     background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -59px -91px;
+    background-position: -31px -139px;
     width: 26px;
     height: 26px;
     background-repeat: no-repeat;
-    background-size: 168px 161px;
+    background-size: 190px 168px;
     .no-svg & {
         background-image: url("../img/sprites/svg/svg-sprite.png");
     }
 }
-.svg-sprite--vk_share {
+.svg-sprite--ok_share {
     background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -87px -91px;
+    background-position: -59px -139px;
     width: 26px;
-    height: 25px;
+    height: 26px;
     background-repeat: no-repeat;
-    background-size: 168px 161px;
+    background-size: 190px 168px;
     .no-svg & {
         background-image: url("../img/sprites/svg/svg-sprite.png");
     }
 }
 .svg-sprite--fb_share {
     background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -115px -91px;
+    background-position: -87px -139px;
     width: 26px;
     height: 25px;
     background-repeat: no-repeat;
-    background-size: 168px 161px;
+    background-size: 190px 168px;
     .no-svg & {
         background-image: url("../img/sprites/svg/svg-sprite.png");
     }
 }
-.svg-sprite--vk_pink {
+.svg-sprite--vk_share {
     background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -145px -50px;
-    width: 20px;
-    height: 20px;
+    background-position: -115px -139px;
+    width: 26px;
+    height: 25px;
     background-repeat: no-repeat;
-    background-size: 168px 161px;
-    .no-svg & {
-        background-image: url("../img/sprites/svg/svg-sprite.png");
-    }
-}
-.svg-sprite--vk {
-    background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -142px -91px;
-    width: 20px;
-    height: 20px;
-    background-repeat: no-repeat;
-    background-size: 168px 161px;
-    .no-svg & {
-        background-image: url("../img/sprites/svg/svg-sprite.png");
-    }
-}
-.svg-sprite--fb_pink {
-    background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -2px -120px;
-    width: 20px;
-    height: 20px;
-    background-repeat: no-repeat;
-    background-size: 168px 161px;
-    .no-svg & {
-        background-image: url("../img/sprites/svg/svg-sprite.png");
-    }
-}
-.svg-sprite--inst {
-    background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -24px -120px;
-    width: 20px;
-    height: 20px;
-    background-repeat: no-repeat;
-    background-size: 168px 161px;
-    .no-svg & {
-        background-image: url("../img/sprites/svg/svg-sprite.png");
-    }
-}
-.svg-sprite--fb {
-    background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -46px -120px;
-    width: 20px;
-    height: 20px;
-    background-repeat: no-repeat;
-    background-size: 168px 161px;
+    background-size: 190px 168px;
     .no-svg & {
         background-image: url("../img/sprites/svg/svg-sprite.png");
     }
 }
 .svg-sprite--inst_pink {
     background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -68px -120px;
+    background-position: -145px -98px;
     width: 20px;
     height: 20px;
     background-repeat: no-repeat;
-    background-size: 168px 161px;
+    background-size: 190px 168px;
+    .no-svg & {
+        background-image: url("../img/sprites/svg/svg-sprite.png");
+    }
+}
+.svg-sprite--inst {
+    background-image: url("../img/sprites/svg/svg-sprite.svg");
+    background-position: -142px -139px;
+    width: 20px;
+    height: 20px;
+    background-repeat: no-repeat;
+    background-size: 190px 168px;
+    .no-svg & {
+        background-image: url("../img/sprites/svg/svg-sprite.png");
+    }
+}
+.svg-sprite--fb_pink {
+    background-image: url("../img/sprites/svg/svg-sprite.svg");
+    background-position: -168px -2px;
+    width: 20px;
+    height: 20px;
+    background-repeat: no-repeat;
+    background-size: 190px 168px;
+    .no-svg & {
+        background-image: url("../img/sprites/svg/svg-sprite.png");
+    }
+}
+.svg-sprite--fb {
+    background-image: url("../img/sprites/svg/svg-sprite.svg");
+    background-position: -168px -24px;
+    width: 20px;
+    height: 20px;
+    background-repeat: no-repeat;
+    background-size: 190px 168px;
+    .no-svg & {
+        background-image: url("../img/sprites/svg/svg-sprite.png");
+    }
+}
+.svg-sprite--vk {
+    background-image: url("../img/sprites/svg/svg-sprite.svg");
+    background-position: -168px -46px;
+    width: 20px;
+    height: 20px;
+    background-repeat: no-repeat;
+    background-size: 190px 168px;
+    .no-svg & {
+        background-image: url("../img/sprites/svg/svg-sprite.png");
+    }
+}
+.svg-sprite--vk_pink {
+    background-image: url("../img/sprites/svg/svg-sprite.svg");
+    background-position: -168px -68px;
+    width: 20px;
+    height: 20px;
+    background-repeat: no-repeat;
+    background-size: 190px 168px;
     .no-svg & {
         background-image: url("../img/sprites/svg/svg-sprite.png");
     }
 }
 .svg-sprite--left {
     background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -145px -72px;
+    background-position: -168px -90px;
     width: 18px;
     height: 15px;
     background-repeat: no-repeat;
-    background-size: 168px 161px;
+    background-size: 190px 168px;
     .no-svg & {
         background-image: url("../img/sprites/svg/svg-sprite.png");
     }
 }
 .svg-sprite--right {
     background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -90px -120px;
+    background-position: -168px -107px;
     width: 18px;
     height: 15px;
     background-repeat: no-repeat;
-    background-size: 168px 161px;
+    background-size: 190px 168px;
     .no-svg & {
         background-image: url("../img/sprites/svg/svg-sprite.png");
     }
 }
 .svg-sprite--cross {
     background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -2px -142px;
+    background-position: -168px -124px;
     width: 17px;
     height: 17px;
     background-repeat: no-repeat;
-    background-size: 168px 161px;
+    background-size: 190px 168px;
     .no-svg & {
         background-image: url("../img/sprites/svg/svg-sprite.png");
     }
 }
 .svg-sprite--back {
     background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -21px -142px;
+    background-position: -168px -143px;
     width: 10px;
     height: 17px;
     background-repeat: no-repeat;
-    background-size: 168px 161px;
+    background-size: 190px 168px;
     .no-svg & {
         background-image: url("../img/sprites/svg/svg-sprite.png");
     }
