--- a/src/styles/pages--external/anims.less
+++ b/src/styles/pages--external/anims.less
@@ -16,6 +16,7 @@
 .fade-in{
   transition: opacity 750ms;
   opacity: 0;
+  position: relative;
   &.visible{
     opacity: 1;
   }
@@ -67,3 +68,31 @@
     animation: shake 800ms 1 cubic-bezier(.36,.07,.19,.97) both;
   }
 }
+/*HTML HEAD*/
+
+//@keyframes pulse {
+//  0%  {opacity: 1;}
+//  100%  {opacity: 0;}
+//}
+//#preloader{
+//  position: fixed;
+//  top: 0;
+//  bottom: 0;
+//  left: 0;
+//  right: 0;
+//  background-color: @raspberry;
+//  z-index: 9999;
+//  transition: all 500ms;
+//  &.loaded{
+//    transform: translate3d(100%,0,0);
+//  }
+//  .logo{
+//    position: fixed;
+//    margin: auto;
+//    top: 0;
+//    bottom: 0;
+//    right: 0;
+//    left: 0;
+//    animation: pulse 1200ms infinite alternate;
+//  }
+//}
