--- a/src/styles/pages--external/general.less
+++ b/src/styles/pages--external/general.less
@@ -114,6 +114,9 @@ footer{
 .noscroll{
   overflow: hidden;
 }
+.white{
+  color: @white;
+}
 .popup{
   @duration: 300ms;
   position: fixed;
@@ -162,6 +165,20 @@ footer{
     right: 10px;
     top: 10px;
     padding: 10px;
+    &.btn{
+      position: initial;
+      margin: auto;
+      padding: 18px 20px;
+    }
+  }
+  p{
+    text-align: left;
+  }
+  .content{
+    text-align: center;
+  }
+  #succsess-message{
+    display: none;
   }
 }
 .block{
@@ -174,5 +191,10 @@ footer{
 .underline{
   &:hover{
     text-decoration: underline;
+  }
+}
+br{
+  @media screen and (max-width: @mobile){
+    display: none;
   }
 }
