--- a/src/styles/pages--external/main.less
+++ b/src/styles/pages--external/main.less
@@ -1,7 +1,16 @@
+#main-bg{
+  position: fixed;
+  z-index: 0;
+  background-color: @raspberry;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
 #main-page{
-  //background-image: url(http://placehold.it/1920x1080/d1596d/d1596d);
-  background-size: cover;
-  background-position: 50% 50%;
+  background-image: url(../img/images/start.jpg);
+  background-size: contain;
+  background-position: 50% 0%;
   background-repeat: no-repeat;
   //background-clip: content-box;
   height: 100vh;
@@ -16,12 +25,19 @@
     padding-top: 100px;
     height: 100vh;
     min-height: 666px;
+    background-size: cover;
+    // background-image: none;
+    background-image: url(../img/images/banner_mobile.jpg);
   }
   &.auto-height{
     height: 100%;
     padding-bottom: 110px;
+    @media screen and (max-width: @mobile){
+      background-image: none;
+    }
     .step2{
       height: 1648px;
+      top: 0;
       @media screen and (max-width: @mobile){
         height: auto;
         //padding-bottom: 200px;
@@ -38,6 +54,7 @@
   }
   .step2{
     position: relative;
+    top: 50px;
     height: 0;
     overflow: hidden;
     transition: all 1500ms;
@@ -145,7 +162,8 @@
   height: 300px;
   background-color: @cherry;
   padding: 25px 20px 30px;
-  max-width: 30%;
+  max-width: 340px;
+  width: 30%;
   transition: all 500ms;
   position: relative;
   padding-right: 100px;
@@ -167,6 +185,12 @@
     .background{
       opacity: 1;
       transform: scale(1.1);
+    }
+    .more{
+      color: @white;
+      span{
+        margin-right: 15px;
+      }
     }
   }
   &:nth-child(even){
@@ -198,7 +222,7 @@
       margin-right: 5px;
       transition: all 500ms;
       &:hover{
-        margin-right: 15px;
+        margin-right: 20px;
       }
     }
   }
