commit before add new changes

--- a/src/styles/common/_svg-sprite.less
+++ b/src/styles/common/_svg-sprite.less
@@ -4,7 +4,7 @@
     width: 164px;
     height: 46px;
     background-repeat: no-repeat;
-    background-size: 190px 168px;
+    background-size: 223px 186px;
     .no-svg & {
         background-image: url("../img/sprites/svg/svg-sprite.png");
     }
@@ -15,7 +15,7 @@
     width: 164px;
     height: 46px;
     background-repeat: no-repeat;
-    background-size: 190px 168px;
+    background-size: 223px 186px;
     .no-svg & {
         background-image: url("../img/sprites/svg/svg-sprite.png");
     }
@@ -26,172 +26,183 @@
     width: 141px;
     height: 39px;
     background-repeat: no-repeat;
-    background-size: 190px 168px;
+    background-size: 223px 186px;
+    .no-svg & {
+        background-image: url("../img/sprites/svg/svg-sprite.png");
+    }
+}
+.svg-sprite--done {
+    background-image: url("../img/sprites/svg/svg-sprite.svg");
+    background-position: -168px -2px;
+    width: 53px;
+    height: 53px;
+    background-repeat: no-repeat;
+    background-size: 223px 186px;
     .no-svg & {
         background-image: url("../img/sprites/svg/svg-sprite.png");
     }
 }
 .svg-sprite--google_share {
     background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -2px -139px;
+    background-position: -168px -57px;
     width: 27px;
     height: 27px;
     background-repeat: no-repeat;
-    background-size: 190px 168px;
-    .no-svg & {
-        background-image: url("../img/sprites/svg/svg-sprite.png");
-    }
-}
-.svg-sprite--twitter_share {
-    background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -31px -139px;
-    width: 26px;
-    height: 26px;
-    background-repeat: no-repeat;
-    background-size: 190px 168px;
+    background-size: 223px 186px;
     .no-svg & {
         background-image: url("../img/sprites/svg/svg-sprite.png");
     }
 }
 .svg-sprite--ok_share {
     background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -59px -139px;
+    background-position: -168px -86px;
     width: 26px;
     height: 26px;
     background-repeat: no-repeat;
-    background-size: 190px 168px;
+    background-size: 223px 186px;
     .no-svg & {
         background-image: url("../img/sprites/svg/svg-sprite.png");
     }
 }
-.svg-sprite--fb_share {
+.svg-sprite--twitter_share {
     background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -87px -139px;
+    background-position: -2px -139px;
     width: 26px;
-    height: 25px;
+    height: 26px;
     background-repeat: no-repeat;
-    background-size: 190px 168px;
+    background-size: 223px 186px;
     .no-svg & {
         background-image: url("../img/sprites/svg/svg-sprite.png");
     }
 }
 .svg-sprite--vk_share {
     background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -115px -139px;
+    background-position: -30px -139px;
     width: 26px;
     height: 25px;
     background-repeat: no-repeat;
-    background-size: 190px 168px;
+    background-size: 223px 186px;
     .no-svg & {
         background-image: url("../img/sprites/svg/svg-sprite.png");
     }
 }
-.svg-sprite--inst_pink {
+.svg-sprite--fb_share {
     background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -145px -98px;
-    width: 20px;
-    height: 20px;
+    background-position: -58px -139px;
+    width: 26px;
+    height: 25px;
     background-repeat: no-repeat;
-    background-size: 190px 168px;
-    .no-svg & {
-        background-image: url("../img/sprites/svg/svg-sprite.png");
-    }
-}
-.svg-sprite--inst {
-    background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -142px -139px;
-    width: 20px;
-    height: 20px;
-    background-repeat: no-repeat;
-    background-size: 190px 168px;
-    .no-svg & {
-        background-image: url("../img/sprites/svg/svg-sprite.png");
-    }
-}
-.svg-sprite--fb_pink {
-    background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -168px -2px;
-    width: 20px;
-    height: 20px;
-    background-repeat: no-repeat;
-    background-size: 190px 168px;
-    .no-svg & {
-        background-image: url("../img/sprites/svg/svg-sprite.png");
-    }
-}
-.svg-sprite--fb {
-    background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -168px -24px;
-    width: 20px;
-    height: 20px;
-    background-repeat: no-repeat;
-    background-size: 190px 168px;
+    background-size: 223px 186px;
     .no-svg & {
         background-image: url("../img/sprites/svg/svg-sprite.png");
     }
 }
 .svg-sprite--vk {
     background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -168px -46px;
+    background-position: -197px -57px;
     width: 20px;
     height: 20px;
     background-repeat: no-repeat;
-    background-size: 190px 168px;
+    background-size: 223px 186px;
+    .no-svg & {
+        background-image: url("../img/sprites/svg/svg-sprite.png");
+    }
+}
+.svg-sprite--fb {
+    background-image: url("../img/sprites/svg/svg-sprite.svg");
+    background-position: -196px -86px;
+    width: 20px;
+    height: 20px;
+    background-repeat: no-repeat;
+    background-size: 223px 186px;
+    .no-svg & {
+        background-image: url("../img/sprites/svg/svg-sprite.png");
+    }
+}
+.svg-sprite--inst {
+    background-image: url("../img/sprites/svg/svg-sprite.svg");
+    background-position: -168px -114px;
+    width: 20px;
+    height: 20px;
+    background-repeat: no-repeat;
+    background-size: 223px 186px;
+    .no-svg & {
+        background-image: url("../img/sprites/svg/svg-sprite.png");
+    }
+}
+.svg-sprite--fb_pink {
+    background-image: url("../img/sprites/svg/svg-sprite.svg");
+    background-position: -190px -114px;
+    width: 20px;
+    height: 20px;
+    background-repeat: no-repeat;
+    background-size: 223px 186px;
     .no-svg & {
         background-image: url("../img/sprites/svg/svg-sprite.png");
     }
 }
 .svg-sprite--vk_pink {
     background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -168px -68px;
+    background-position: -145px -98px;
     width: 20px;
     height: 20px;
     background-repeat: no-repeat;
-    background-size: 190px 168px;
+    background-size: 223px 186px;
+    .no-svg & {
+        background-image: url("../img/sprites/svg/svg-sprite.png");
+    }
+}
+.svg-sprite--inst_pink {
+    background-image: url("../img/sprites/svg/svg-sprite.svg");
+    background-position: -85px -139px;
+    width: 20px;
+    height: 20px;
+    background-repeat: no-repeat;
+    background-size: 223px 186px;
     .no-svg & {
         background-image: url("../img/sprites/svg/svg-sprite.png");
     }
 }
 .svg-sprite--left {
     background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -168px -90px;
+    background-position: -145px -120px;
     width: 18px;
     height: 15px;
     background-repeat: no-repeat;
-    background-size: 190px 168px;
+    background-size: 223px 186px;
     .no-svg & {
         background-image: url("../img/sprites/svg/svg-sprite.png");
     }
 }
 .svg-sprite--right {
     background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -168px -107px;
+    background-position: -107px -139px;
     width: 18px;
     height: 15px;
     background-repeat: no-repeat;
-    background-size: 190px 168px;
+    background-size: 223px 186px;
     .no-svg & {
         background-image: url("../img/sprites/svg/svg-sprite.png");
     }
 }
 .svg-sprite--cross {
     background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -168px -124px;
+    background-position: -2px -167px;
     width: 17px;
     height: 17px;
     background-repeat: no-repeat;
-    background-size: 190px 168px;
+    background-size: 223px 186px;
     .no-svg & {
         background-image: url("../img/sprites/svg/svg-sprite.png");
     }
 }
 .svg-sprite--back {
     background-image: url("../img/sprites/svg/svg-sprite.svg");
-    background-position: -168px -143px;
+    background-position: -21px -167px;
     width: 10px;
     height: 17px;
     background-repeat: no-repeat;
-    background-size: 190px 168px;
+    background-size: 223px 186px;
     .no-svg & {
         background-image: url("../img/sprites/svg/svg-sprite.png");
     }
