--- a/src/styles/pages--external/general.less
+++ b/src/styles/pages--external/general.less
@@ -180,6 +180,9 @@ footer{
   #succsess-message{
     display: none;
   }
+  .svg-sprite--done{
+    margin: auto;
+  }
 }
 .block{
   display: block;
