--- a/src/styles/pages--external/long-read.less
+++ b/src/styles/pages--external/long-read.less
@@ -381,9 +381,15 @@
   }
   a{
     color: @white;
+    &:hover{
+      text-decoration: underline;
+    }
   }
   .link{
     margin-bottom: 35px;
+    &:hover{
+      text-decoration: underline;
+    }
   }
 }
 .right-popup{
